--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "constants": "^0.0.2",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
+    "install": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
