--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "constants": "^0.0.2",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.1.4",
     "install": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
